# EZ-Kart

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/ez_kart/: Command.h  Voltmeter.h
devel/include/ez_kart_msgs/: Voltmeter.h
devel/include/status_monitor/: Status.h
devel/include/voice_control/: Command.h
devel/share/controls/cmake/: controlsConfig.cmake
devel/share/ez_kart/cmake/: ez_kart-msg-extras.cmake  ez_kart-msg-paths.cmake  ez_kartConfig.cmake
devel/share/ez_kart_msgs/cmake/: ez_kart_msgs-msg-extras.cmake  ez_kart_msgs-msg-paths.cmake  ez_kart_msgsConfig.cmake
devel/share/sensors/cmake/: sensorsConfig.cmake
devel/share/status_monitor/cmake/: status_monitor-msg-extras.cmake  status_monitor-msg-paths.cmake  status_monitorConfig.cmake
devel/share/tracking/cmake/: trackingConfig.cmake
devel/share/user_alerts/cmake/: user_alertsConfig.cmake
devel/share/voice_control/cmake/: voice_control-msg-extras.cmake  voice_control-msg-paths.cmake  voice_controlConfig.cmake
install/: .rosinstall  _setup_util.py  setup.sh
install/include/ez_kart/: Status.h
install/include/ez_kart_msgs/: Command.h  Status.h
install/share/controls/cmake/: controlsConfig.cmake
install/share/ez_kart/: package.xml
install/share/ez_kart/cmake/: ez_kart-msg-extras.cmake  ez_kart-msg-paths.cmake  ez_kartConfig.cmake
install/share/ez_kart_msgs/: package.xml
install/share/ez_kart_msgs/cmake/: ez_kart_msgs-msg-extras.cmake  ez_kart_msgs-msg-paths.cmake  ez_kart_msgsConfig.cmake
install/share/sensors/: package.xml
install/share/sensors/cmake/: sensorsConfig.cmake
install/share/status_monitor/: package.xml
install/share/status_monitor/cmake/: status_monitorConfig.cmake
install/share/tracking/cmake/: trackingConfig.cmake
install/share/user_alerts/: package.xml
install/share/voice_control/: package.xml
launches/: controls.launch  ez_kart.launch  sensors.launch
src/apriltags_lib/apriltags/: package.xml
src/apriltags_lib/apriltags_ros/: CMakeLists.txt  package.xml
src/apriltags_ros/apriltags/: CMakeLists.txt
src/camera_umd/uvc_camera/: ost.yaml
src/controls/: CMakeLists.txt  package.xml
src/controls/src/: controller.cpp
src/ez_kart/: CMakeLists.txt  package.xml
src/ez_kart_msgs/: CMakeLists.txt
src/ez_kart_msgs/msg/: Command.msg  Status.msg  motorControl.msg
src/sensors/: CMakeLists.txt  package.xml
src/sensors/firmware/: CMakeLists.txt  sensors.cpp
src/speech_recognizer/: CMakeLists.txt  package.xml
src/speech_recognizer/demo/: ez_kart.corpus  ez_kart.dic  ez_kart.launch  ez_kart.lm
src/speech_recognizer/nodes/: recognizer.py
src/status_monitor/: CMakeLists.txt  package.xml
src/status_monitor/msg/: Status.msg
src/status_monitor/src/: status_monitor.py
src/tracking/: CMakeLists.txt  package.xml
src/tracking/src/: pose.py  tracking.py
src/user_alerts/: CMakeLists.txt  package.xml
src/voice_control/: CMakeLists.txt  package.xml
src/voice_control/src/: voice_control.py
(+28 files in other folders)
